$Date$

VEGAN RELEASE VERSIONS at http://cran.r-project.org/

Version 2.0-9 (opened August 23, 2013)

	* merge 2613: 'medoid' to 'median' in betadisper output and doc.
	* merge 2600: remove tools::: in vegandocs().
	* merge 2597: move vignettes from inst/doc to vignettes/; depend
	on R 2.14.0.
	* merge 2593: remove stats::: in anova.ccabyaxis().
	* merge 2590: typos.
	* merge r2588: remove unneeded utils::: in vegandocs (some remain). 
	* merge 2584,6: vegan Depends on lattice, avoid lattice:::
	* merge r2583,7: remove cross-references to disappear in R-3.0-2.
	* merge r2580,1: literature refs in specaccum.Rd and
	betadisper.Rd.
	* merge r2571: aspell fixes in Rd files (stressplot.wmcscale.Rd,
	commsim.Rd and nullmodel.Rd did not exist in 2.0 and were
	excluded).
	* merge r2570: aspell fixes in R files.
	* merge r2568: aspell fixes in Rd files.
	* merge r2564: line wrapping in betadiver(help=TRUE).
	* merge r2562, 2563, 2565-7, 2572-6: edit and reformat Rnw file;
	decision-vegan.Rnw required hand-editing due to conflicts in
	text on parallel processing that was not merged.
	* merge r2558: ordiktplot bmp device in all platforms. 
	
Version 2.0-8 (released July 10, 2013)

	* merge r2540: remove hard-coded inconsolata fonts.
	* merge r2539: stressplot return data in input order.
	* merge r2538: use expression(R^2) in stressplot.
	* merge r2537, 2541: add plot.ordipointlabel.
	* merge r2535, 2536: better positioning of arrow labels.
	* merge r2534: lwd in ordisurf.
	* merge r2533: ordipointlabel uses ordiArgAbsorber.
	* merge r2532: clean up ordilabel.
	* merge r2504: notation in adipart.Rd.
	* merge r2498: adapt raupcrick to r2495.
	* merge r2497: avoid visible ~ in .Rnw.
	* merge r2496: use crossprod() in indpower.
	* merge r2495: fix twisted test direction in oecosimu.
	* merge r2490 thru 2493: ordisurf new options.
	* merge r2484 thru 2486: betadisper fixes (centroid with one
	group, call it medoid).
	
Version 2.0-7 (released March 19, 2013)
