@@ -8,8 +8,5 @@ intersetcor <- function(object)
         wa <- sweep(object$CCA$wa, 1, sqrt(w), "*")
     }
     X <- qr.X(object$CCA$QR)
-    ## current R (2.12.0) uses wrong column names in pivoted qr.X()
-    if (getRversion() <= "2.12.0")
-        colnames(X)[object$CCA$QR$pivot] <- colnames(X)
     cor(X, wa)
 }
