@@ -334,6 +334,7 @@ request to us for incorporating your changes in @pkg{vegan} releases.
 * Where can I find numerical scores of ordination axes?::  
 * How the RDA results are scaled?::  
 * cca fails with ``data.frame expected'' or ``"site.env" missing''::  
+* Ordination fails with ``Error in La.svd''::  
 * Variance explained by ordination axes::  
 * Can I have random effects in constrained ordination or in @code{adonis}?::  
 * Is it possible to have passive points in ordination?::  
@@ -478,7 +479,7 @@ explained in a separate @acronym{pdf} document on ``Design decision and
 implementation details in vegan'' that you can read with @pkg{vegan}
 command @code{vegandocs("decision")}.
 
-@node cca fails with ``data.frame expected'' or ``"site.env" missing'', Variance explained by ordination axes, How the RDA results are scaled?, Ordination
+@node cca fails with ``data.frame expected'' or ``"site.env" missing'', Ordination fails with ``Error in La.svd'', How the RDA results are scaled?, Ordination
 @section cca fails with ``data.frame expected'' or ``"site.env" missing''
 
 This is not a @pkg{vegan} error message, but it comes from the
@@ -489,7 +490,29 @@ can use the @pkg{vegan} version using command @code{vegan::cca()}. If
 you do not need package @pkg{ade4}, you can detach it with command
 @code{detach(package:ade4)}.
 
-@node Variance explained by ordination axes, Can I have random effects in constrained ordination or in @code{adonis}?, cca fails with ``data.frame expected'' or ``"site.env" missing'', Ordination
+@node Ordination fails with ``Error in La.svd'', Variance explained by ordination axes, cca fails with ``data.frame expected'' or ``"site.env" missing'', Ordination
+@section Ordination fails with ``Error in La.svd''
+
+Constrained ordination (@code{cca}, @code{rda}, @code{capscale}) will
+sometimes fail with error message 
+@code{Error in La.svd(x, nu, nv): error code 1 from Lapack routine 'dgesdd'.}  
+
+It seems that the basic problem is in the @code{svd} function of
+@code{LAPACK} that is used for numerical analysis in R.  @code{LAPACK}
+is an external library that is beyond the control of package developers
+and R core team so that these problems may be unsolvable. It seems that
+the problems with the @code{LAPACK} code are so common that even the
+help page of @code{svd} warns about them
+
+Reducing the range of constraints (environmental variables) helps
+sometimes. For instance, multiplying constraints by a constant < 1. This
+rescaling does not influence the numerical results of constrained
+ordination, but it can complicate further analyses when values of
+constraints are needed, because the same scaling must be applied
+there. We can only hope that this problem is fixed in the future
+versions of R and @code{LAPACK}.
+
+@node Variance explained by ordination axes, Can I have random effects in constrained ordination or in @code{adonis}?, Ordination fails with ``Error in La.svd'', Ordination
 @section Variance explained by ordination axes.
 
 In general, @pkg{vegan} does not directly give any statistics on the
